# feature_store_utils

./: .gitignore  README.md  databricks.yml  demo  - model.py  demo - 15 min.py  demo - data.py  demo - feature table pipeline.py  demo.py  demo_data_python.py  features.yaml  generate tables.py  generate_sql.py  pyproject.toml  requirements.txt  setup.py  t.py
Content Streamer Demo/: Build Model.py  Generate data and Write to Feature Tables.py  features.yaml
Customer Churn Demo/: demo  - model.py  demo - 15 min.py  demo - data.py  features.yaml  generate tables.py
features/: feature_generation.py  feature_spec.py  generate.py  hyper_feature.py  sql_gen.py
features/templates/: fact_aggregations.j2  timeseries_growth.j2  timeseries_growth_m.j2  type1_lookup.j2  type2_lookup.j2
features/templates/macros/: helpers.j2
jobs/: demo - feature table pipeline.py  pytest_databricks.py
remote_test_harness/: pytest_databricks.py
tests/: spark_test.py
tests/local_tests/: features.yaml  features_2.yaml  jinja_test.py
tests/time_series/: dim_calendar.sql  features.yaml  time_series_test.py
tests/type1_tables/: features.yaml  type1_lookup_test.py  type1_table_test.py
