[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ben_mackenzie_features"
version = "0.0.9"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'python-dotenv',
    'pyspark',
    'databricks-feature-store',
    'Jinja2',
    'pandas',
    'pyaml'
    ]

[tool.setuptools.package-data]
"features.templates" = ["*.j2"]